[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Enemy_KB.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 34.5005

[node name="Enemy_KB" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemyController" type="Node2D" parent="."]

[node name="Gun" type="Node2D" parent="EnemyController"]
position = Vector2( 48, 0 )

[node name="FireFrequency" type="Timer" parent="EnemyController/Gun"]
wait_time = 0.1

[node name="ReloadTimer" type="Timer" parent="EnemyController/Gun"]
wait_time = 2.0

[node name="Sprite" type="Sprite" parent="EnemyController"]
modulate = Color( 1, 0.329412, 0.329412, 1 )
texture = ExtResource( 2 )
[connection signal="timeout" from="EnemyController/Gun/FireFrequency" to="." method="_on_FireFrequency_timeout"]
[connection signal="timeout" from="EnemyController/Gun/ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
